	* Screenname colors in chats now chosen intelligently from GNOME color
	  palette
	* Yahoo! has the following new "/" commands:  /join, /buzz
	* Smiley selection dialog rewritten to look nicer (Nathan Fredrickson)
	* If Gaim is exited with the buddy list hidden in the docklet, it will
	  remain hidden when Gaim is started again (Scott Shedden)
	
	Bug fixes:
	* Some memory leaks plugged (Miah Gregory, Felipe Contreras)
	* People using input methods can now use Enter again.
	* Many problems related to having an IM conversation and a chat open
	  with the same name (Andrew Hart)

	Preference changes:
	* Removed "Dim idle buddies" buddy list preference, default to "Yes."
	* Removed keyboard shortcut preferences for ctrl-b/i/u and made sure they
	  won't interfere with bindings set by the GTK theme.
	* Removed keyboard shortcuts preferences for ctrl-# to insert a smiley,
	  default to "No"
	* Removed preference for buddy list button type, defaulted to "None"
	* Removed "Enter" vs. "Ctrl-Enter" to send, defaulted to "Enter" to send,
	  made it possible to change this binding in your GTK theme.
	* Removed "Show multi-colored screennames in chats," defaulted to "Yes."
	  Made screenname colors automatically adjust themselves to compensate for
	  background color.
	* Removed "Raise Buddy List Window on Events" defaulted to "No"
	* Removed "Display remote nicknames if no alias is set"
	* Removed "Show idle times" and "Show warning levels" from the buddy list
	  defaulted to "Yes".

version 1.0.2 (10/19/2004):
	Bug Fixes:
	* MSN file transfers work on big endian machines (Jean-Francois Roy and
	  Evan Schoenberg)
	* Fixed the MSN signon crash with Miranda users in the buddy list
	* Fixed sending messages to MSN Web Messenger users (Damien Ayers)
	* Fixed some memory leaks in the MSN plugin (Evan Schoenberg)
	* Fixed a crash viewing certain MSN user profiles (Evan Schoenberg)
	* Fixed a crash sending a file on MSN when the file is unreadable